--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <title>全国公安交通管理信息综合查询系统</title>
+  <link rel="icon" href="http://gd.122.gov.cn/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
+  <div class="header">
+    <i class="logo"></i>
+    <h1>全国公安交通管理信息综合查询系统</h1>
+    <p>NATIONAL PUBLIC SECURITY TRAFFIC MANAGEMENET INFORMATION INTERRATED QUERY SYSTEM</p>
+  </div>
   <div class="tab">
     <div class="item">
       临时行驶机动车查询
@@ -16,7 +22,7 @@
   </div>
   <div class="search">
     <fieldset>
-      <legend>查询条件</legend>
+      <legend><i class="icon icon-search"></i>查询条件</legend>
       号牌号码：
       <select>
         <option value="粤">粤</option>
@@ -31,7 +37,7 @@
   </div>
   <div class="info">
     <fieldset>
-      <legend>机动车信息</legend>
+      <legend><i class="icon icon-info"></i>机动车信息</legend>
       <table>
         <thead>
           <tr>
@@ -46,22 +52,22 @@
         </thead>
         <tbody>
           <tr title="双击查看详细信息">
-            <td><input type="text" value="xxxxx"></td>
-            <td><input type="text" value="xxxxx"></td>
-            <td><input type="text" value="xxxxx"></td>
-            <td><input type="text" value="xxxxx"></td>
-            <td><input type="text" value="xxxxx"></td>
-            <td><input type="text" value="xxxxx"></td>
-            <td><input type="text" value="xxxxx"></td>
+            <td><input type="text"></td>
+            <td><input type="text"></td>
+            <td><input type="text"></td>
+            <td><input type="text"></td>
+            <td><input type="text"></td>
+            <td><input type="text"></td>
+            <td><input type="text"></td>
           </tr>
           <tr title="双击查看详细信息">
-            <td><input type="text" value="xxxxx"></td>
-            <td><input type="text" value="xxxxx"></td>
-            <td><input type="text" value="xxxxx"></td>
-            <td><input type="text" value="xxxxx"></td>
-            <td><input type="text" value="xxxxx"></td>
-            <td><input type="text" value="xxxxx"></td>
-            <td><input type="text" value="xxxxx"></td>
+            <td><input type="text"></td>
+            <td><input type="text"></td>
+            <td><input type="text"></td>
+            <td><input type="text"></td>
+            <td><input type="text"></td>
+            <td><input type="text"></td>
+            <td><input type="text"></td>
           </tr>
         </tbody>
       </table>
