--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
             <option value="黔">黔</option>
             <option value="滇">滇</option>
             <option value="青">青</option>
+            <option value="沪">沪</option>
           </select>
           <input class="input" style="display: block; width: 120px; margin-right: 50px; margin-top: 5px;" type="text">
         </div>
@@ -92,7 +93,7 @@
     </fieldset>
   </div>
   <div class="handle">
-    <button onclick="add()">Add</button>
+    <button onclick="add()">操我</button>
   </div>
   <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
   <script>
