--- a/app/system.html
+++ b/app/system.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/system.css" />
   </head>
 
   <body>
