chore: 文明一点吧

--- a/app/system.html
+++ b/app/system.html
@@ -104,7 +104,7 @@
       </fieldset>
     </div>
     <div class="handle">
-      <button onclick="add()">操我</button>
+      <button onclick="add()">加一行</button>
     </div>
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
     <script>
