--- a/app/system.html
+++ b/app/system.html
@@ -62,7 +62,12 @@
             </select>
             <input
               class="input"
-              style="display: block; width: 120px; margin-right: 50px; margin-top: 5px;"
+              style="
+                display: block;
+                width: 120px;
+                margin-right: 50px;
+                margin-top: 5px;
+              "
               type="text"
             />
           </div>
@@ -91,13 +96,13 @@
           </thead>
           <tbody id="tbody">
             <tr title="双击查看详细信息">
-              <td><input type="text" /></td>
-              <td><input type="text" /></td>
-              <td><input type="text" /></td>
-              <td><input type="text" /></td>
-              <td><input type="text" /></td>
-              <td><input type="text" /></td>
-              <td><input type="text" /></td>
+              <td><div contenteditable></div></td>
+              <td><div contenteditable></div></td>
+              <td><div contenteditable></div></td>
+              <td><div contenteditable></div></td>
+              <td><div contenteditable></div></td>
+              <td><div contenteditable></div></td>
+              <td><div contenteditable></div></td>
             </tr>
           </tbody>
         </table>
@@ -109,17 +114,17 @@
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
     <script>
       function add() {
-        $("#tbody").append(`
+        $('#tbody').append(`
           <tr title="双击查看详细信息">
-            <td><input type="text"></td>
-            <td><input type="text"></td>
-            <td><input type="text"></td>
-            <td><input type="text"></td>
-            <td><input type="text"></td>
-            <td><input type="text"></td>
-            <td><input type="text"></td>
+            <td><div contenteditable></div></td>
+              <td><div contenteditable></div></td>
+              <td><div contenteditable></div></td>
+              <td><div contenteditable></div></td>
+              <td><div contenteditable></div></td>
+              <td><div contenteditable></div></td>
+              <td><div contenteditable></div></td>
           </tr>
-        `);
+        `)
       }
     </script>
   </body>
