--- a/app/query.html
+++ b/app/query.html
@@ -249,10 +249,10 @@
                       <thead>
                         <tr style="color: #116ec9;">
                           <th>号牌号码</th>
-                          <th>登记日期</th>
+                          <th style="width: 130px">登记日期</th>
                           <th>车辆品牌</th>
                           <th>车辆型号</th>
-                          <th>车辆识别代号</th>
+                          <th style="width: 130px">车辆识别代号</th>
                           <th>所有人</th>
                           <th>有效期止</th>
                           <th>核发人</th>
