--- a/app/index.html
+++ b/app/index.html
@@ -85,23 +85,25 @@
           <thead>
             <tr>
               <th style="width: 110px;">号牌号码</th>
-              <th style="width: 140px;">机动车所有人</th>
+              <th style="width: 95px;">机动车所有人</th>
               <th>发动机号</th>
               <th>车辆识别代码</th>
-              <th>临时证序列号</th>
+              <th style="width: 95px;">临时证序列号</th>
               <th>厂牌型号</th>
-              <th style="width: 80px;">有效期</th>
+              <th style="width: 90px;">有效期止</th>
+              <th>记录状态</th>
             </tr>
           </thead>
           <tbody id="tbody">
             <tr title="双击查看详细信息">
-              <td><div contenteditable></div></td>
-              <td><div contenteditable></div></td>
-              <td><div contenteditable></div></td>
-              <td><div contenteditable></div></td>
-              <td><div contenteditable></div></td>
-              <td><div contenteditable></div></td>
-              <td><div contenteditable></div></td>
+              <td><div contenteditable>粤A88888</div></td>
+              <td><div contenteditable>王大帅</div></td>
+              <td><div contenteditable>ASGH123456</div></td>
+              <td><div contenteditable>HDNBH05D12D******</div></td>
+              <td><div contenteditable>O748512345</div></td>
+              <td><div contenteditable>劳斯莱斯BDGDVGD5</div></td>
+              <td><div contenteditable>2021年01月88日</div></td>
+              <td><div contenteditable>正常</div></td>
             </tr>
           </tbody>
         </table>
@@ -115,6 +117,7 @@
       function add() {
         $('#tbody').append(`
           <tr title="双击查看详细信息">
+            <td><div contenteditable></div></td>
             <td><div contenteditable></div></td>
             <td><div contenteditable></div></td>
             <td><div contenteditable></div></td>
