--- a/app/seal.html
+++ b/app/seal.html
@@ -11,8 +11,8 @@
         top: 70%;
         left: 60%;
         width: 130px;
+        height: 130px;
         padding: 2px 0px;
-        height: 81px;
         color: #d32d1f;
         border: 3px solid #d32d1f;
         transform: scale(1);
@@ -21,9 +21,15 @@
       .seal-text {
         font-size: 24px;
         font-weight: bold;
-        line-height: 26px;
+        line-height: 43px;
         letter-spacing: 2px;
         transform: rotateY(24deg);
+        text-align: center;
+      }
+
+      .seal-text-17 {
+        font-size: 21px;
+        letter-spacing: 0;
       }
 
       .handle {
@@ -38,7 +44,13 @@
   <body>
     <div class="seal">
       <div class="seal-text" contenteditable>
-        中南海怀仁堂一品带刀侍卫罗三又
+        辽宁省沈阳
+      </div>
+      <div class="j-sealtext seal-text" contenteditable>
+        市公安局交
+      </div>
+      <div class="j-sealtext seal-text" contenteditable>
+        通警察支队
       </div>
     </div>
     <div class="handle">
@@ -48,13 +60,17 @@
       <button onclick="direction('down')">下</button>
       <button onclick="direction('left')">左</button>
       <button onclick="direction('right')">右</button>
-      <button onclick="hide()">打印前点我隐藏</button>
       <button onclick="circle()">圆角</button>
+      <button onclick="seventeen()">17字</button>
+      <button onclick="hide()">打印前点我隐藏</button>
     </div>
   </body>
   <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script>
     let scale = 1
+    function seventeen() {
+      $('.j-sealtext').toggleClass('seal-text-17')
+    }
     function hide() {
       $('.handle').hide()
     }
