--- a/app/seal.html
+++ b/app/seal.html
@@ -12,18 +12,16 @@
         left: 60%;
         width: 190px;
         height: 190px;
-        padding: 2px 0px;
         color: #d32d1f;
         border: 3px solid #d32d1f;
         transform: scale(1);
       }
 
       .seal-text {
-        font-size: 34px;
-        font-weight: bold;
+        font-size: 36px;
+        font-family: SimSun;
+        font-weight: bolder;
         line-height: 63px;
-        letter-spacing: 2px;
-        transform: rotateY(24deg);
         text-align: center;
       }
 
